fix: do not disable the whole presenter screen + button margin

--- a/views/present.ejs
+++ b/views/present.ejs
@@ -101,7 +101,7 @@
             text-decoration: none;
             display: inline-block;
             font-size: 16px;
-            margin: 0 8px;
+            margin: 4px 8px;
             cursor: pointer;
             flex-basis: calc(50% - 16px);
         }
@@ -115,7 +115,7 @@
         }
 
         @media (max-width:600px) {
-            #container {
+            #presentationPreview {
                 display: none !important;
             }
         }
