--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -39,7 +39,8 @@
     </style>
     <style>
         body,
-        html {
+        html,
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -66,10 +67,14 @@
             flex-direction: column;
         }
 
+        .editor * {
+            font-family: 'Courier New', Courier, monospace;
+        }
+
         #markdownEditor,
         #styleEditor {
             flex-grow: 1;
-            border: 1px solid grey
+            border: 1px solid grey;
         }
 
         #preview {
@@ -91,7 +96,7 @@
             justify-content: space-between;
         }
 
-        button {
+        .button {
             background-color: #4CAF50;
             border: none;
             color: white;
@@ -105,7 +110,7 @@
             flex-basis: calc(50% - 16px);
         }
 
-        button:hover {
+        .button:hover {
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.24);
         }
     </style>
@@ -118,14 +123,15 @@
                 <div class="slide-title">
                     <h2>Edit your slides</h2>
                     <div class="buttons">
-                        <button onclick="mdHandler.save()">Save</button>
+                        <a href="/present/<%= name %>/present" target="_blank" rel="noopener noreferrer" class="button">Present</a>
+                        <button class="button" onclick="mdHandler.save()">Save</button>
                     </div>
                 </div>
-                <div id="markdownEditor"></div>
+                <div class="editor" id="markdownEditor"></div>
             </div>
             <div>
                 <h2>Edit your style</h2>
-                <div id="styleEditor"></div>
+                <div class="editor" id="styleEditor"></div>
             </div>
         </div>
         <div id="previewContainer">
