--- a/views/list-files.ejs
+++ b/views/list-files.ejs
@@ -33,8 +33,7 @@
         .slide-container {
             display: grid;
             grid-auto-rows: 30%;
-            grid-auto-columns: 30%;
-            grid-auto-flow: column;
+            grid-template-columns: repeat(3, 1fr);
             gap: 1%;
             flex-grow: 1;
         }
@@ -45,9 +44,21 @@
             display: flex;
         }
 
+
+        @media (max-width:1024px) {
+            .slide-container {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
+        @media (max-width:480px) {
+            .slide-container {
+                grid-template-columns: repeat(1, 1fr);
+            }
+        }
+
         .slide-container .slide-loader,
         .slide-container .slide {
-
             position: relative;
             display: flex;
             height: 100%;
@@ -126,7 +137,6 @@
     <div id="content">
         <h1>Your Slides</h1>
         <div class="slide-container">
-
             <% files.forEach(file=> { %>
                 <div>
                     <div class="edit-controls">
