fix: use absolute urls for buttons and preview

--- a/views/list-files.ejs
+++ b/views/list-files.ejs
@@ -144,18 +144,18 @@
                             <%= file %>
                         </h3>
                         <div class="buttons">
-                            <a class="button" href="edit/<%= file %>">
+                            <a class="button" href="/edit/<%= file %>">
                                 Edit
                             </a>
-                            <a class="button" href="present/<%= file %>/present">
+                            <a class="button" href="/present/<%= file %>/present">
                                 Present
                             </a>
-                            <a class="button" href="present/<%= file %>">
+                            <a class="button" href="/present/<%= file %>">
                                 View
                             </a>
                         </div>
                     </div>
-                    <div class="slide-loader" data-url="edit/<%= file %>/preview">
+                    <div class="slide-loader" data-url="/edit/<%= file %>/preview">
                         <div class="spinner"></div>
                     </div>
                 </div>
